# exercises-2-intro-progra

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: excercises.h
src/: CMakeLists.txt  exercises.cpp  main.cpp
tests/: CMakeLists.txt  exercise10_test.cpp  exercise11_test.cpp  exercise12_test.cpp  exercise13_test.cpp  exercise14_test.cpp  exercise15_test.cpp  exercise16_test.cpp  exercise17_test.cpp  exercise18_19_test.cpp  exercise1_test.cpp  exercise2_test.cpp  exercise3_test.cpp  exercise4_test.cpp  exercise5_test.cpp  exercise6_test.cpp  exercise7_test.cpp  exercise8_test.cpp  exercise9_test.cpp
